Fixed N+1 problem. Deleted Slider Entity